# brikick

./: APENDICE_BRIKICK_PONTOS_INOVADORES.md  BRIKICK_FEATURES_INOVADORAS.md  BRIKICK_PROJECT_ANALYSIS.md  BRIKICK_QUICK_REFERENCE.md  CORRECOES_WARNINGS.md  ESTADO_FINAL_PROJETO.md  GUIA_GPT_CODEX_COMPLETO_V2.md  GUIA_GPT_CODEX_PASSO_A_PASSO.md  GUIA_TESTES_BRIKICK.md
brikick/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml
brikick/.github/workflows/: tests.yml
brikick/alembic/: env.py
brikick/alembic/versions/: 20260130_0001_create_users_roles_audit.py  20260130_0002_create_catalog_price_guide.py  20260130_0003_create_stores.py  20260130_0004_create_inventory.py  20260130_0005_create_rating.py  20260130_0006_create_penalties.py  20260130_0007_create_cart.py  20260130_0008_create_checkout.py  20260130_0009_rename_checkout_approvals.py  20260130_0010_create_orders.py  20260130_0011_create_shipping_fairness.py
brikick/api/: __init__.py  deps.py  main.py
brikick/api/v1/: auth.py  cart.py  catalog.py  checkout.py  orders.py  router.py
brikick/core/: config.py  exceptions.py  security.py
brikick/db/: session.py
brikick/db/models/: __init__.py  cart.py  catalog.py  checkout.py  inventory.py  orders.py  penalties.py  rating.py  shipping_fairness.py  stores.py  users.py
brikick/docker/: Dockerfile
brikick/services/: penalty_service.py  price_guide.py  price_validation.py  rating.py  shipping_fairness.py  shipping_proof.py
brikick/tests/: conftest.py
brikick/tests/e2e/: test_purchase_flow.py
brikick/workers/: celery_app.py
docs/: README.md
(+46 files in other folders)
