[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brikick"
version = "0.1.0"
description = "Brikick LEGO marketplace backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "alembic",
  "pydantic-settings",
  "celery[redis]",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "db*", "services*", "workers*"]
